--- a/Homework/n11/assets/css/style.css
+++ b/Homework/n11/assets/css/style.css
@@ -514,7 +514,7 @@
 .container .section_1 .product_box .cards .card .description .price {
   width: 100%;
   text-align: left;
-  margin-top: 70px;
+  margin-top: 65px;
   display: flex;
   flex-direction: column;
 }
@@ -531,6 +531,11 @@
   font-weight: 700;
   letter-spacing: 0.13px;
   margin-bottom: 5px;
+}
+.container .section_1 .product_box .cards .card .description .price #discount {
+  color: #4f4f4f;
+  text-decoration-line: line-through;
+  font-size: 12px;
 }
 .container .section_1 .product_box_2 {
   width: 67%;
@@ -665,7 +670,7 @@
 .container .section_1 .product_box_2 .cards .card .description .price {
   width: 100%;
   text-align: left;
-  margin-top: 50px;
+  margin-top: 45px;
   display: flex;
   flex-direction: column;
 }
@@ -682,6 +687,11 @@
   font-weight: 700;
   letter-spacing: 0.13px;
   margin-bottom: 2px;
+}
+.container .section_1 .product_box_2 .cards .card .description .price #discount {
+  color: #4f4f4f;
+  text-decoration-line: line-through;
+  font-size: 12px;
 }
 .container .section_1 .promo_con {
   width: 100%;
@@ -794,7 +804,7 @@
 .container .section_1 .promo_con .promo_area .right .cards .card .description .price {
   width: 100%;
   text-align: left;
-  margin-top: 30px;
+  margin-top: 25px;
   margin-bottom: 10px;
   display: flex;
   flex-direction: column;
@@ -812,6 +822,11 @@
   font-weight: 700;
   letter-spacing: 0.13px;
   margin-bottom: 5px;
+}
+.container .section_1 .promo_con .promo_area .right .cards .card .description .price #discount {
+  color: #4f4f4f;
+  text-decoration-line: line-through;
+  font-size: 12px;
 }
 .container .section_1 .promo_con .promo_area .right .brand_list {
   width: 100%;
@@ -951,7 +966,7 @@
 .container .section_1 .promo_con_2 .promo_area .right .cards .card .description .price {
   width: 100%;
   text-align: left;
-  margin-top: 30px;
+  margin-top: 25px;
   margin-bottom: 10px;
   display: flex;
   flex-direction: column;
@@ -969,6 +984,11 @@
   font-weight: 700;
   letter-spacing: 0.13px;
   margin-bottom: 5px;
+}
+.container .section_1 .promo_con_2 .promo_area .right .cards .card .description .price #discount {
+  color: #4f4f4f;
+  text-decoration-line: line-through;
+  font-size: 12px;
 }
 .container .section_1 .promo_con_2 .promo_area .right .brand_list {
   width: 100%;
@@ -1561,6 +1581,9 @@
   .container .section_1 .product_box .cards .card .description .price span {
     font-size: 11px;
   }
+  .container .section_1 .product_box .cards .card .description .price #discount {
+    font-size: 10px;
+  }
   .container .section_1 .product_box_2 {
     width: 90%;
   }
@@ -1609,6 +1632,9 @@
   .container .section_1 .product_box_2 .cards .card .description .price span {
     font-size: 11px;
   }
+  .container .section_1 .product_box_2 .cards .card .description .price #discount {
+    font-size: 10px;
+  }
   .container .section_1 .promo_con,
   .container .section_1 .promo_con_2 {
     margin: 10px;
@@ -1637,6 +1663,9 @@
   .container .section_1 .promo_con .promo_area .right .cards .card .description .rating .stars {
     width: 60%;
     font-size: 8px;
+  }
+  .container .section_1 .promo_con .promo_area .right .cards .card .description .price #discount {
+    font-size: 11px;
   }
   .container .section_1 .promo_con .promo_area .right .brand_list {
     background: #d4be9c;
@@ -1672,6 +1701,9 @@
   .container .section_1 .promo_con_2 .promo_area .right .cards .card .description .rating .stars {
     width: 60%;
     font-size: 8px;
+  }
+  .container .section_1 .promo_con_2 .promo_area .right .cards .card .description .price #discount {
+    font-size: 11px;
   }
   .container .section_1 .promo_con_2 .promo_area .right .brand_list {
     background: #597482;
