--- a/Homework/n11/style.scss
+++ b/Homework/n11/style.scss
@@ -507,7 +507,7 @@
             .price {
               width: 100%;
               text-align: left;
-              margin-top: 70px;
+              margin-top: 65px;
               display: flex;
               flex-direction: column;
               ins {
@@ -523,6 +523,11 @@
                 font-weight: 700;
                 letter-spacing: 0.13px;
                 margin-bottom: 5px;
+              }
+              #discount {
+                color: #4f4f4f;
+                text-decoration-line: line-through;
+                font-size: 12px;
               }
             }
           }
@@ -667,7 +672,7 @@
             .price {
               width: 100%;
               text-align: left;
-              margin-top: 50px;
+              margin-top: 45px;
               display: flex;
               flex-direction: column;
               ins {
@@ -683,6 +688,11 @@
                 font-weight: 700;
                 letter-spacing: 0.13px;
                 margin-bottom: 2px;
+              }
+              #discount {
+                color: #4f4f4f;
+                text-decoration-line: line-through;
+                font-size: 12px;
               }
             }
           }
@@ -799,7 +809,7 @@
                 .price {
                   width: 100%;
                   text-align: left;
-                  margin-top: 30px;
+                  margin-top: 25px;
                   margin-bottom: 10px;
                   display: flex;
                   flex-direction: column;
@@ -816,6 +826,11 @@
                     font-weight: 700;
                     letter-spacing: 0.13px;
                     margin-bottom: 5px;
+                  }
+                  #discount {
+                    color: #4f4f4f;
+                    text-decoration-line: line-through;
+                    font-size: 12px;
                   }
                 }
               }
@@ -957,7 +972,7 @@
                 .price {
                   width: 100%;
                   text-align: left;
-                  margin-top: 30px;
+                  margin-top: 25px;
                   margin-bottom: 10px;
                   display: flex;
                   flex-direction: column;
@@ -974,6 +989,11 @@
                     font-weight: 700;
                     letter-spacing: 0.13px;
                     margin-bottom: 5px;
+                  }
+                  #discount {
+                    color: #4f4f4f;
+                    text-decoration-line: line-through;
+                    font-size: 12px;
                   }
                 }
               }
@@ -1601,6 +1621,9 @@
             span {
               font-size: 11px;
             }
+            #discount {
+              font-size: 10px;
+            }
           }
         }
       }
@@ -1656,6 +1679,9 @@
             span {
               font-size: 11px;
             }
+            #discount {
+              font-size: 10px;
+            }
           }
         }
       }
@@ -1689,6 +1715,9 @@
               width: 60%;
               font-size: 8px;
             }
+          }
+          .card .description .price #discount {
+            font-size: 11px;
           }
         }
 
@@ -1727,6 +1756,9 @@
               width: 60%;
               font-size: 8px;
             }
+          }
+          .card .description .price #discount {
+            font-size: 11px;
           }
         }
 
